syntax = "proto3";
package cosmos.crisis.v1beta1;

option go_package = "github.com/cosmos/cosmos-sdk/x/crisis/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

// Msg defines the bank Msg service.
service Msg {
  // VerifyInvariant defines a method to verify a particular invariance.
  rpc VerifyInvariant(MsgVerifyInvariant) returns (MsgVerifyInvariantResponse);

  rpc TripCircuitBreaker(MsgTripCircuitBreaker) returns (MsgTripCircuitBreakerResponse);

  rpc ClearCircuitBreaker(MsgClearCircuitBreaker) returns (MsgClearCircuitBreakerResponse);

  rpc AuthorizeCircuitBreaker(MsgAuthorizeCircuitBreaker) returns (MsgAuthorizeCircuitBreakerResponse);
}

// MsgVerifyInvariant represents a message to verify a particular invariance.
message MsgVerifyInvariant {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string sender                = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string invariant_module_name = 2;
  string invariant_route       = 3;
}

// MsgVerifyInvariantResponse defines the Msg/VerifyInvariant response type.
message MsgVerifyInvariantResponse {}

message MsgTripCircuitBreaker {
  string sender                = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // type_urls is the list of Msg type URls to trip in the circuit breaker.
  repeated string type_urls = 2;
}

message MsgTripCircuitBreakerResponse {}

message MsgClearCircuitBreaker {
  string sender                = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // type_urls is the list of Msg type URls to clear in the circuit breaker.
  repeated string type_urls = 2;
}

message MsgClearCircuitBreakerResponse {}